--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hoi4save"
-version = "0.1.7-pre"
+version = "0.1.7"
 authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
 edition = "2018"
 exclude = ["/assets/*", "/fuzz/*"]
