Introduce new file API
This is the HOI4 equivalent of the [new API in EU4][0]. In short:

- Saves can be converted into JSON
- One can deserialize and melt a save without parsing the save again
- Using binary tokens from `HOI4_IRONMAN_TOKENS` is no longer implicit
  and must use `EnvTokens`

[0]: https://github.com/rakaly/eu4save/pull/24

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ keywords = ["hoi4", "ironman"]
 categories = ["parsing"]
 
 [dependencies]
-jomini = "0.18"
+jomini = { version = "0.19", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
+thiserror = "1"
 
 [dev-dependencies]
 zip = { version =  "0.6", default-features = false, features = ["deflate"] }
