--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,13 @@ keywords = ["hoi4", "ironman"]
 categories = ["parsing"]
 
 [dependencies]
-jomini = { version = "0.29.0", features = ["json"] }
+jomini = { git = "https://github.com/rakaly/jomini.git", branch = "envelope", features = ["json"] }
 serde = { version = "1.0.195", features = ["derive"] }
 thiserror = "2.0.0"
 
 [dev-dependencies]
-attohttpc = "0.26"
-flate2 = { version = "1.1.0", default-features = false, features = ["zlib-rs"] }
+attohttpc = { version = "0.30", default-features = false, features = ["tls-native"] }
+flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
 rawzip = "0.4.0"
 
 [profile.test]
